# GroundSLASH

./: .coveragerc  .gitignore  ASP.g4  ASP.interp  ASPCore.g4  ASPCore.interp  ASPCoreParser.py  ASPCoreVisitor.py  ASPLexer.interp  ASPLexer.py  ASPParser.py  ASPVisitor.py  ASP_BNF.g  ASP_EBNF.g  AST.py  ASTVisitor.py  ProgramBuilder.py  ProgramVisitor.py  README.md  aggregate.py  atom.py  choice.py  comparison.py  conjunction.py  disjunction.py  example_cases.lp  format.sh  literal.py  parse.py  program.py  pytest.sh  query.py  setup.cfg  statement.py  tables.py  term.py
.githooks/: pre-push
.github/workflows/: tests.yaml
antlr/: ASPCore.g4  ASPCoreLexer.tokens  ASPCoreVisitor.py
asp/: ProgramBuilder.py  aggregate.py  atom.py  choice.py  expression.py  literal.py  program.py  query.py  statement.py  tables.py  term.py
src/: .coveragerc  check_format.sh  coverage.sh  format.sh
src/aspy/: __init__.py  debug.py
src/aspy/antlr/: ASPCore.g4  ASPCore.interp  ASPCoreLexer.interp  ASPCoreLexer.py  ASPCoreParser.py  ASPCoreVisitor.py  generate.sh
src/aspy/grounder/: component_graph.py  edb_idb.py  grounder.py  match.py  scc.py
src/aspy/grounding/: __init__.py  grounder.py  propagation.py
src/aspy/program/: ProgramBuilder.py  __init__.py  expression.py  operators.py  program.py  program_builder.py  query.py  safety.py  safety_characterization.py  substitution.py  symbol_table.py  symbols.py  tables.py  variable_set.py  variable_table.py
src/ground_slash/: __init__.py  debug.py
src/ground_slash/antlr/: SLASH.g4  SLASH.interp  SLASH.tokens  SLASHLexer.interp  SLASHLexer.py  SLASHParser.py  SLASHVisitor.py
src/ground_slash/grounding/: __init__.py  grounder.py
src/ground_slash/lark/: SLASH_LALR.lark  SLASH_backup.lark  (+6 more)
src/tests/: conftest.py  test_component_graph.py  test_safety.py
(+120 files in other folders)
