[metadata]
name = ground_slash
url = TODO
author = attr: ground_slash.__author__
version = attr: ground_slash.__version__
description = Parser and Grounder for SLASH
long_description = file: README.md
long_description_content_type = text/markdown
keywords = SLASH, Neural-Probabilistic Answer Set Programming

[options]
package_dir=
    = src
packages = find:
install_requires =
    antlr4-python3-runtime

[options.packages.find]
where=src