[metadata]
name = ground_slash
url = https://github.com/pdeibert/GroundSLASH
author = attr: ground_slash.__author__
version = attr: ground_slash.__version__
description = Parser and grounder SLASH (neural-probabilistic Answer Set Programming)
long_description = file: README.md
long_description_content_type = text/markdown
keywords = SLASH, Neural-Probabilistic Answer Set Programming, Answer Set Programming, ASP, Neuro-Symbolic AI, Machine Learning

[options]
package_dir=
    = src
packages = find:
install_requires =
    lark

[options.packages.find]
where=src

[options.extras_require]
test = pytest; clingo