[metadata]
name = ground_slash
url = TODO
author = attr: ground_slash.__author__
version = attr: ground_slash.__version__
description = Parser and grounder for SLASH
long_description = file: README.md
long_description_content_type = text/markdown
keywords = SLASH, Neural-Probabilistic Answer Set Programming, ASP, Answer Set Programmin, Neuro-Symbolic AI

[options]
package_dir=
    = src
packages = find:
install_requires =
    antlr4-python3-runtime

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    ground_slash = ground_slash:main

[options.extras_require]
dev = pytest; pytest-cov; clingo